Fix swagger tag
